--- a/PracticeProject1/style.css
+++ b/PracticeProject1/style.css
@@ -7,7 +7,9 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0%;
+  padding-right: 10%;
+  padding-left: 10%;
 }
 
 label,
@@ -130,4 +132,23 @@ button:active {
   padding: 1rem;
   border: 1px solid #ff0062;
   background: #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+form div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+form div input,
+textarea {
+  margin: auto;
+}
+
+form button {
+  margin-top: 15px;
 }
